--- a/promocion.html
+++ b/promocion.html
@@ -25,25 +25,22 @@
     </nav>
 
     <main>
-        <!-- Inicio Producto -->
         <section class="productos">
+
+            <!-- Inicio Producto -->
             <div class="product">
                 <div class="product-inner">
                     <div class="front"> <!-- Efecto frente -->
-                        <img src="images/0008.jpg" alt="Producto 8">
-                        <p class="nombre-producto">12 CupCakes</p>
+                        <img src="images/00056.jpg" alt="Producto 8">
+                        <p class="nombre-producto">MiniCake - Corazon</p>
                     </div>
                     <div class="back"> <!-- Efecto detrás -->
-                        <p class="descripcion">Sabores: </p>
-                        <ul class="descripcion">
-                            <li>Chocolate.</li>
-                            <li>Vainilla.</li>
-                            <li>Marmolado.</li>
-                        </ul>
-                        <p class="descripcion">Sin relleno:</p>
-                        <p class="precio">$10</p>
-                        <p class="descripcion">Con relleno de chocolate o dulce de leche:</p>
-                        <p class="precio">$12.00</p>
+                        <p class="descripcion">Sabor a vainilla, chocolate o marmoleada.
+                            10 cm de diámetro por 8 cm de alto aproximadamente. Relleno
+                            de arequipe o chocolate con un peso de 600 grs aproximadamente rinde
+                            para 4 porciones.
+                            </p>
+                            <p class="precio">$10.00</p>
                     </div>
                 </div>
             </div>
@@ -53,8 +50,84 @@
             <div class="product">
                 <div class="product-inner">
                     <div class="front"> <!-- Efecto frente -->
-                        <img src="images/0009.jpg" alt="Producto 9">
-                        <p class="nombre-producto">6 CupCakes</p>
+                        <img src="images/00057.jpg" alt="Producto 9">
+                        <p class="nombre-producto">MiniCake - Redondo</p>
+                    </div>
+                    <div class="back"> <!-- Efecto detrás -->
+                        <p class="descripcion">Sabor a vainilla, chocolate o marmoleada.
+                            10 cm de diámetro por 8 cm de alto aproximadamente. Relleno
+                            de arequipe o chocolate con un peso de 600 grs aproximadamente rinde
+                            para 4 porciones.
+                            </p>
+                            <p class="precio">$10.00</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Final Producto -->
+
+            <!-- Inicio Producto -->
+            <div class="product">
+                <div class="product-inner">
+                    <div class="front"> <!-- Efecto frente -->
+                        <img src="images/00058.jpg" alt="Producto 10">
+                        <p class="nombre-producto">MiniCake - Personal</p>
+                    </div>
+                    <div class="back"> <!-- Efecto detrás -->
+                        <p class="descripcion">Sabor a vainilla, chocolate o marmoleada.
+                            10 cm de diámetro por 5 cm de alto aproximadamente. Relleno
+                            de arequipe o chocolate con un peso de 400 grs aproximadamente.
+                            </p>
+                            <p class="precio">$6.00</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Final Producto -->
+        </section>
+            <!--Nueva Seccion -->
+        <section class="productos">
+
+            <!-- Inicio Producto -->
+            <div class="product">
+                <div class="product-inner">
+                    <div class="front"> <!-- Efecto frente -->
+                        <img src="images/0006.jpg" alt="Producto 8">
+                        <p class="nombre-producto">Choco Quesillo</p>
+                    </div>
+                    <div class="back"> <!-- Efecto detrás -->
+                        <p class="descripcion">10 cm de diametro por 8cm de alto aproximadamente
+                            con peso de 450gr, rinde para 4 porciones.
+                            </p>
+                            <p class="precio">$10</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Final Producto -->
+
+            <!-- Inicio Producto -->
+            <div class="product">
+                <div class="product-inner">
+                    <div class="front"> <!-- Efecto frente -->
+                        <img src="images/00061.jpg" alt="Producto 9">
+                        <p class="nombre-producto">Torta - Corazon</p>
+                    </div>
+                    <div class="back"> <!-- Efecto detrás -->
+                        <p class="descripcion">Sabor a vainilla, chocolate o marmoleada.
+                            15 cm de diámetro por 10 cm de alto aproximadamente. Relleno
+                            de arequipe o chocolate con un peso de 900 grs aproximadamente rinde
+                            para 8 porciones.
+                            </p>
+                            <p class="precio">$15.00</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Final Producto -->
+
+            <!-- Inicio Producto -->
+            <div class="product">
+                <div class="product-inner">
+                    <div class="front"> <!-- Efecto frente -->
+                        <img src="images/00060.jpg" alt="Producto 10">
+                        <p class="nombre-producto">CupCakes</p>
                     </div>
                     <div class="back"> <!-- Efecto detrás -->
                         <p class="descripcion">Sabores:</p>
@@ -63,15 +136,40 @@
                             <li>Vainilla.</li>
                             <li>Marmolado.</li>
                         </ul>
-                        <p class="descripcion">Sin relleno:</p>
-                        <p class="precio">$5.50</p>
                         <p class="descripcion">Con relleno de chocolate o dulce de leche:</p>
-                        <p class="precio">$7.00</p>
+                        <p class="descripcion">6 cupcakes por:</p>
+                        <p class="precio">$9.00</p>
+                        <p class="descripcion">12 cupcakes por:</p>
+                        <p class="precio">$16.00</p>
                     </div>
                 </div>
             </div>
             <!-- Final Producto -->
+        </section>
 
+         <!--Nueva Seccion -->
+        <section class="productos">
+
+            <!-- Inicio Producto -->
+            <div class="product">
+                <div class="product-inner">
+                    <div class="front"> <!-- Efecto frente -->
+                        <img src="images/00059.jpg" alt="Producto 8">
+                        <p class="nombre-producto">12 MiniDonuts</p>
+                    </div>
+                    <div class="back"> <!-- Efecto detrás -->
+                        <p class="descripcion">Sabores:</p>
+                        <ul class="descripcion">
+                            <li>Vainilla.</li>
+                            <li>Chocolate.</li>
+                            <li>Marmoleada.</li>
+                        </ul>
+                        <p class="descripcion">Con temática del dia de las madres cubiertas de chocolate. </p>
+                        <p class="precio">$8.0</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Final Producto -->
         </section>
     </main>
 
